[package]
name = "sqlite-cache"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
description = "SQLite-based on-disk cache."
repository = "https://github.com/losfair/sqlite-cache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27"
data-encoding = "2.3.2"
futures = "0.3.21"
tracing = "0.1.35"

[dev-dependencies]
tracing-test = "0.2.2"
tokio = { version = "1.19.2", features = ["macros", "rt", "time"] }
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "cache_benchmark"
harness = false
